# affilgood-reranking

./: .gitignore  README.md  pyproject.toml
data/input/: ror_records.txt
src/: 00_update-ror-registry.py  01_prepare-candidates.py  02_annotate-with-llm.py  registry.py  ror_retrieval_experiments.py  run_affilel_experiments.py
